--- a/README.Rmd
+++ b/README.Rmd
@@ -52,6 +52,9 @@ APA reference:
 
 ![Summary table of the morning sleep diary](output/tables/table_sleepdiary.png)
 
+### Chronotype
+
+![Summary table of chronotype questionnaires](output/tables/table_chronotype.png)
 
 ## Summary of the dataset
 | Dataset name | BAUA |
