--- a/README.Rmd
+++ b/README.Rmd
@@ -56,6 +56,10 @@ APA reference:
 
 ![Summary table of chronotype questionnaires](output/tables/table_chronotype.png)
 
+## Exercise diary
+
+![Summary table of the evening exercise diary](output/tables/table_exercisediary.png)
+
 ## Summary of the dataset
 | Dataset name | BAUA |
 | --- | --- |
