--- a/README.Rmd
+++ b/README.Rmd
@@ -60,6 +60,10 @@ APA reference:
 
 ![Summary table of the wear log](output/tables/table_wearlog.png)
 
+### Wellbeing diary
+
+![Summary table of the evening wellbeing diary (WHO-5)](output/tables/table_wellbeingdiary.png)
+
 ### Exercise diary
 
 ![Summary table of the evening exercise diary](output/tables/table_exercisediary.png)
