--- a/scripts/import_wearlog.qmd
+++ b/scripts/import_wearlog.qmd
@@ -48,7 +48,12 @@ codebook <- prepare_codebook("MeLiDosWearLog_DataDictionary_2024-10-16.csv")
 #collect files
 files <- filefinder("wearlog", continuous = TRUE, individual = TRUE)
 #import files
-data <- read_csv(files, show_col_types = FALSE) |> drop_na(redcap_repeat_instance)
+data <- 
+  read_csv(files, show_col_types = FALSE) |>   
+  fill(redcap_survey_identifier) |> 
+  mutate(
+         record_id = redcap_survey_identifier) |> 
+  drop_na(redcap_repeat_instance)
 #check column types
 coltype_check <- coltype_checker(codebook, data)
 coltype_check$details |> gt()
@@ -174,7 +179,7 @@ Native language is translated into English with AI and later checked by a site r
 
 ```{r}
 #| label: translate into english with AI
-# 
+
 # library(ellmer)
 # 
 # #Providing the relevant codebook portions
