--- a/README.Rmd
+++ b/README.Rmd
@@ -68,6 +68,10 @@ APA reference:
 
 ![Summary table of the evening exercise diary](output/tables/table_exercisediary.png)
 
+### Light exposure (mH-LEA) and activity diary
+
+![Summary table of the evening light exposure (mH-LEA) and activity diary](output/tables/table_lightexposurediary.png)
+
 ### Current conditions
 
 ![Summary table of the current conditions EMA](output/tables/table_currentconditions.png)
