--- a/scripts/import_light_head.qmd
+++ b/scripts/import_light_head.qmd
@@ -106,6 +106,21 @@ data_cleaned <- data |>  gap_handler(full.days = TRUE)
 data_cleaned |> gap_table(MEDI) |> cols_hide(ends_with("_n"))
 ```
 
+## Removing unrealistic data
+
+`BAUA_S023` has a basically flat trajectory and will be excluded from further analysis:
+
+```{r}
+data_cleaned |> sample_groups(sample = 18) |> gg_days()
+```
+
+```{r}
+data_cleaned <- 
+  data_cleaned |> 
+  filter(Id == "BAUA_S023")
+```
+
+
 ## Exporting values
 
 ```{r}
